# conan2dummyupstream

./: .gitignore  README.md
cpp/: CMakeLists.txt  conan_provider.cmake  conanfile.py
cpp/include/mytest/: mytest.hpp  spec.hpp
cpp/src/: mytest.cpp
cpp/test/: CMakeLists.txt
cpp/test/unittest/: CMakeLists.txt
cpp/test/unittest/src/: test.cpp
cpp/test_package/: CMakeLists.txt  conanfile.py
cpp/test_package/src/: main.cpp
